--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <head>
 <style>
 body{
-background-image: url("bg.gif");
-opacity: 1;
-
+background-image: url("bg_.gif");
 }
 
 #cassoshi{
@@ -47,7 +45,7 @@ height:250px;
 
 <body>
 
-<img src="cassoshi.png" id="cassoshi" align="middle"/>
+<img src="cassoshi_.png" id="cassoshi" align="middle"/>
 
 <div id="cont">
 <iframe id="spot" src="https://open.spotify.com/embed/user/12166597438/playlist/0c9O69pjkNBCXJ1Z2Eklvh" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
