--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <head>
 <style>
 body{
-background-image: url("bg_.gif");
+background-image: url("bg.gif");
+background-repeat-y:no-repeat;
+background-color: #000;
+background-position: center bottom;
 }
 
 #cassoshi{
@@ -10,10 +13,11 @@ background-image: url("bg_.gif");
 vertical-align: center;
 width: 90%;
 display: block;
-max-width: 600px;
+max-width: 490px;
 margin-left: auto;
 margin-right: auto;
-margin-bottom:0px;
+margin-bottom:5px;
+
 
 }
 
@@ -22,11 +26,11 @@ vertical-align: center;
 display: block;
 margin-left: auto;
 margin-right: auto;
-height:300px;
 width:450px;
 margin-top:0px;
-background-color: rgba(0,0,0,0.5);
-padding-top:25px;
+background-color: rgba(0,0,0,0.7);
+padding-top:15px;
+padding-bottom:15px;
 
 }
 #spot{
